Fixed typo in release-drafter.yml file

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -9,7 +9,7 @@ categories:
     label: 
       - 'Bug'
       - 'BugFix'
-      = 'Fix'
+      - 'Fix'
   - title: '🧰 Maintenance'
     label: 'Maintenance'
   - title: '📖 Documentation'
