--- a/.github/workflows/newman-tests.yml
+++ b/.github/workflows/newman-tests.yml
@@ -1,16 +1,15 @@
-name: Newman Tests
+name: Newman Run
 
 on:
-  push:
-    # branches to consider in the event; optional, defaults to all
+  pull_request:
     branches:
-      - main
+    - master
 
 jobs:
-  run_newman_tests:
+  newman:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
+      - uses: actions/checkout@master
       - uses: matt-ball/newman-action@master
       with:
         collection: postman_collection.json
