--- a/.github/workflows/newman-tests.yml
+++ b/.github/workflows/newman-tests.yml
@@ -2,22 +2,40 @@ name: Newman Run
 
 on:
   push:
-    # branches to consider in the event; optional, defaults to all
     branches:
       - main
-
 jobs:
-  newman:
+  test-api:
     runs-on: ubuntu-latest
     steps:
-    # Install the newman command line utility and also install the html extra reporter
-      - name: Install newman HTML Reporter
-        run: |
-          npm install -g newman-reporter-htmlextra
-    
-      - uses: actions/checkout@master
-      - uses: matt-ball/newman-action@master
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+
+      # INstall Node on the runner
+      - name: Install Node
+        uses: actions/setup-node@v1
         with:
-          collection: newman-tests.postman_collection.json
-          reporters: '["htmlextra"]'
-          envVar: '[{ "key": "baseUrl", "value": "https://fakerapi.it/api/v1/" }]'
+          node-version: "12.x"
+
+
+      # Install the newman command line utility and also install the html extra reporter
+      - name: Install newman
+        run: |
+          npm install -g newman
+          npm install -g newman-reporter-htmlextra
+      # Make directory to upload the test results
+      - name: Make Directory for results
+        run: mkdir -p testResults
+
+
+      # Run the POSTMAN collection
+      - name: Run POSTMAN collection
+        run: |
+          newman run newman-tests.postman_collection.json --env-var "baseUrl=https://fakerapi.it/api/v1/" -r htmlextra --reporter-htmlextra-export testResults/htmlreport.html --reporter-htmlextra-darkTheme  > testResults/runreport1.html
+      # Upload the contents of Test Results directory to workspace
+      - name: Output the run Details
+        uses: actions/upload-artifact@v2
+        with:
+          name: RunReports
+          path: testResults
